--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,22 +1,10 @@
-.column-layout {
+:host {
+  height: 100%;
   display: flex;
   flex-direction: column;
-}
-.master-view-container {
   justify-content: flex-start;
   align-items: stretch;
   align-content: flex-start;
-  height: 100%;
-}
-.row-layout {
-  display: flex;
-}
-.group {
-  justify-content: flex-start;
-  align-items: center;
-  align-content: flex-start;
-  gap: 1rem;
-  overflow: hidden;
 }
 .navbar {
   height: max-content;
@@ -27,18 +15,16 @@
   position: relative;
   flex-grow: 1;
 }
+.navbar-content {
+  gap: 1rem;
+}
 .avatar {
+  --igx-avatar-background: transparent;
   margin: 0 8px 0 0;
 }
-.avatar::part(base) {
-  background-color: transparent;
-}
 .button {
+  --igx-button-foreground: var(--ig-gray-900);
   --ig-size: var(--ig-size-medium);
   margin: 0 8px 0 0;
   height: max-content;
-  flex-shrink: 0;
-}
-.button::part(base) {
-  color: var(--ig-gray-900);
 }
